# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

hppCoredir = @includedir@/hpp
hppCore_HEADERS = \
	hppColPair.h \
	hppPolyhedron.h \
	hppBox.h \
	hppProblem.h \
	hppPlanner.h

if BODY
hppCore_HEADERS += \
	hppDevice.h \
	hppBody.h 
endif



