# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

hppCoredir = @includedir@/hppCore
hppCore_HEADERS = \
	hppCore/hppColPair.h \
	hppCore/hppProblem.h \
	hppCore/hppPlanner.h

if BODY
hppModeldir = @includedir@/hppModel
hppModel_HEADERS = \
	hppModel/hppModel/hppBody.h 
endif



